---------------------------------------------------------------------------------------------------
Version: 3.1.7
Date: 29. 04. 2019
  Bugfixes:
    - fixed FARL creating wrong events when placing landfill/concrete
    - improved signal distance on diagonal tracks
---------------------------------------------------------------------------------------------------
Version: 3.1.6
Date: 18. 04. 2019
  Bugfixes:
    - fixed gui conflict with BlueprintExtensions
---------------------------------------------------------------------------------------------------
Version: 3.1.5
Date: 09. 04. 2019
  Bugfixes:
    - fixed errors when using Multiple Unit Train Control
---------------------------------------------------------------------------------------------------
Version: 3.1.4
Date: 05. 04. 2019
  Bugfixes:
    - fixed crash in certain circumstances when updating to 3.1.3
    - fixed shallow and mud water from Alien Biomes not being landfilled
---------------------------------------------------------------------------------------------------
Version: 3.1.3
Date: 01. 04. 2019
  Changes:
    - added support for Multiple Unit Train Control mod
  Bugfixes:
    - fixed some signals being placed in the wrong direction (read blueprints in again)
---------------------------------------------------------------------------------------------------
Version: 3.1.2
Date: 29. 03. 2019
  Bugfixes:
    - fixed entities not being added in maintenance/bulldozer mode
    - fixed coal not being collected when removing stone rocks
---------------------------------------------------------------------------------------------------
Version: 3.1.1
Date: 28. 03. 2019
  Bugfixes:
    - fixed error with Multiple Unit Train Control mod
---------------------------------------------------------------------------------------------------
Version: 3.1.0
Date: 19. 03. 2019
  Changes:
    - added option to remove cliffs, requires cliff explosives (defaults to true)