@@ -3,6 +3,7 @@ Version: 3.1.7
 Date: 29. 04. 2019
   Bugfixes:
     - fixed FARL creating wrong events when placing landfill/concrete
+    - fixed FARL replacing concrete with wrong tiles
     - improved signal distance on diagonal tracks
 ---------------------------------------------------------------------------------------------------
 Version: 3.1.6
